--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,7 @@ body {
     overflow: hidden;
     font-family: "Montserrat", sans-serif;
 }
+
+.animatedButton {
+    animation-duration: 10000ms;
+}
