featured post design

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,12 +3,13 @@
 @tailwind utilities;
 
 body {
-    background-color: #e6e6ff;
-    width: 100vw;
-    overflow: hidden;
-    font-family: "Montserrat", sans-serif;
+  background-color: #e6e6ff;
+  width: 100vw;
+  /* overflow: hidden; */
+  overflow-x: hidden;
+  font-family: "Montserrat", sans-serif;
 }
 
 .animatedButton {
-    animation-duration: 10000ms;
+  animation-duration: 10000ms;
 }
